@@ -1,7 +1,17 @@
 {
-  "count": 3,
-  "uniques": 3,
+  "count": 5,
+  "uniques": 5,
   "clones": [
+    {
+      "timestamp": "2026-01-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2026-01-30T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
     {
       "timestamp": "2026-01-31T00:00:00Z",
       "count": 0,
@@ -59,16 +69,6 @@
     },
     {
       "timestamp": "2026-02-11T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-12T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
-      "timestamp": "2026-02-13T00:00:00Z",
       "count": 0,
       "uniques": 0
     }
